# MyJarvis

./: README.md  pyproject.toml
.github/workflows/: flake8_mypy_for_push.yml  flake8_mypy_test_coverage_for_pull_requst.yml
src/myjarvis/application/: __init__.py
src/myjarvis/application/commands/: __init__.py  attach_node.py  create_agent.py  send_message.py
src/myjarvis/application/dto/: __init__.py  agent_dto.py  node_dto.py
src/myjarvis/application/handlers/: __init__.py  command_handlers.py  query_handlers.py
src/myjarvis/application/queries/: __init__.py  get_agent.py  get_user_agents.py
src/myjarvis/domain/: __init__.py
src/myjarvis/domain/entities/: __init__.py  ai_agent.py  chat_context.py  node.py  user.py
src/myjarvis/domain/events/: __init__.py  chat_context_events.py
src/myjarvis/domain/exceptions/: __init__.py  domain_exceptions.py
src/myjarvis/domain/factories/: chat_context_factory.py
src/myjarvis/domain/repositories/: __init__.py  agent_repository.py  node_repository.py  user_repository.py
src/myjarvis/domain/services/: __init__.py  agent_service.py  chat_context_services.py  chat_limits_service.py  message_expiration_service.py  message_operations_service.py  node_service.py
src/myjarvis/domain/value_objects/: __init__.py  agent_id.py  ai_agent_name.py  chat_limits.py  email.py  llm_api_key.py  llm_model.py  llm_provider.py  message.py  message_collection.py  message_role.py  node_id.py  user_id.py
src/myjarvis/infrastructure/: __init__.py
src/myjarvis/infrastructure/cache/: redis_cache.py
src/myjarvis/infrastructure/database/: __init__.py  session.py
src/myjarvis/infrastructure/llm/: __init__.py  anthropic_llm.py  base_llm.py  gemini_llm.py  openai_llm.py
src/myjarvis/infrastructure/nodes/: __init__.py  base_node.py  calendar_node.py  email_node.py  google_docs_node.py  (+1 more)
src/myjarvis/presentation/: __init__.py
tests/unit/domain/: test_ai_agent.py  test_chat_context.py  test_chat_context_services.py  test_message_operations_service_part1.py  test_message_operations_service_part2.py  test_user.py
(+19 files in other folders)
