[tool.poetry]
name = "MyJarvis"
version = "0.1.0"
description = ""
authors = ["Alex Grytsai <grytsai.alex@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.16.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
inline-quotes = "\""
ignore = ["E203", "E266", "W503", "N807", "N818", "F401"]
max-line-length = 79
max-complexity = 18
select = ["B","C","E","F","W","T4","B9","Q0","N8","VNE"]
exclude = []

[tool.black]
line-length = 79
